Added inputs for value1 and value2

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,5 +7,13 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-item color="light">
+    <ion-label position="floating">VALOR 1</ion-label>
+    <ion-input type="number" [(ngModel)]="valor1"></ion-input>
+  </ion-item>
 
+  <ion-item color="light">
+    <ion-label position="floating">VALOR 2</ion-label>
+    <ion-input type="number" [(ngModel)]="valor2"></ion-input>
+  </ion-item>
 </ion-content>
