--- a/src/global.scss
+++ b/src/global.scss
@@ -32,3 +32,7 @@
   font-family: 'Rubik', sans-serif;
   --ion-font-family: 'Rubik', sans-serif;
 }
+
+.failedVerificationToast {
+  font-size: 1.5rem;
+}
