--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,5 +7,43 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div class="result">
+    <p>{{ result }}</p>
+  </div>
+  <div class="m">
+    <ion-button disabled>MC</ion-button>
+    <ion-button disabled>MR</ion-button>
+    <ion-button>M+</ion-button>
+    <ion-button>M-</ion-button>
+    <ion-button>MS</ion-button>
+    <ion-button disabled>M</ion-button>
+  </div>
+
+  <div class="operations">
+    <ion-button class="operations-buttons">%</ion-button>
+    <ion-button class="operations-buttons">¬</ion-button>
+    <ion-button class="operations-buttons">x²</ion-button>
+    <ion-button class="operations-buttons">1/x</ion-button>
+    <ion-button class="operations-buttons">CE</ion-button>
+    <ion-button class="operations-buttons">C</ion-button>
+    <ion-button class="operations-buttons">DEL</ion-button>
+    <ion-button class="operations-buttons">/</ion-button>
+    <ion-button class="operations-buttons number-button">7</ion-button>
+    <ion-button class="operations-buttons number-button">8</ion-button>
+    <ion-button class="operations-buttons number-button">9</ion-button>
+    <ion-button class="operations-buttons">X</ion-button>
+    <ion-button class="operations-buttons  number-button">4</ion-button>
+    <ion-button class="operations-buttons number-button">5</ion-button>
+    <ion-button class="operations-buttons number-button">6</ion-button>
+    <ion-button class="operations-buttons">-</ion-button>
+    <ion-button class="operations-buttons number-button">1</ion-button>
+    <ion-button class="operations-buttons number-button">2</ion-button>
+    <ion-button class="operations-buttons number-button">3</ion-button>
+    <ion-button class="operations-buttons">+</ion-button>
+    <ion-button class="operations-buttons">+-</ion-button>
+    <ion-button class="operations-buttons number-button">0</ion-button>
+    <ion-button class="operations-buttons">,</ion-button>
+    <ion-button class="operations-buttons">=</ion-button>
+  </div>
 
 </ion-content>
