--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,29 +21,31 @@
 
   <div class="operations">
     <ion-button class="operations-buttons">%</ion-button>
-    <ion-button class="operations-buttons">¬</ion-button>
-    <ion-button class="operations-buttons">x²</ion-button>
-    <ion-button class="operations-buttons">1/x</ion-button>
     <ion-button class="operations-buttons">CE</ion-button>
     <ion-button class="operations-buttons">C</ion-button>
-    <ion-button class="operations-buttons">DEL</ion-button>
-    <ion-button class="operations-buttons">/</ion-button>
-    <ion-button class="operations-buttons number-button">7</ion-button>
-    <ion-button class="operations-buttons number-button">8</ion-button>
-    <ion-button class="operations-buttons number-button">9</ion-button>
-    <ion-button class="operations-buttons">X</ion-button>
-    <ion-button class="operations-buttons  number-button">4</ion-button>
-    <ion-button class="operations-buttons number-button">5</ion-button>
-    <ion-button class="operations-buttons number-button">6</ion-button>
+    <ion-button class="operations-buttons">
+      <ion-icon name="backspace"></ion-icon>
+    </ion-button>
+    <ion-button class="operations-buttons">1/x</ion-button>
+    <ion-button class="operations-buttons">x²</ion-button>
+    <ion-button class="operations-buttons">√x</ion-button>
+    <ion-button class="operations-buttons">÷</ion-button>
+    <ion-button class="operations-buttons other-button">7</ion-button>
+    <ion-button class="operations-buttons other-button">8</ion-button>
+    <ion-button class="operations-buttons other-button">9</ion-button>
+    <ion-button class="operations-buttons">x</ion-button>
+    <ion-button class="operations-buttons other-button">4</ion-button>
+    <ion-button class="operations-buttons other-button">5</ion-button>
+    <ion-button class="operations-buttons other-button">6</ion-button>
     <ion-button class="operations-buttons">-</ion-button>
-    <ion-button class="operations-buttons number-button">1</ion-button>
-    <ion-button class="operations-buttons number-button">2</ion-button>
-    <ion-button class="operations-buttons number-button">3</ion-button>
+    <ion-button class="operations-buttons other-button">1</ion-button>
+    <ion-button class="operations-buttons other-button">2</ion-button>
+    <ion-button class="operations-buttons other-button">3</ion-button>
     <ion-button class="operations-buttons">+</ion-button>
-    <ion-button class="operations-buttons">+-</ion-button>
-    <ion-button class="operations-buttons number-button">0</ion-button>
-    <ion-button class="operations-buttons">,</ion-button>
-    <ion-button class="operations-buttons">=</ion-button>
+    <ion-button class="operations-buttons other-button">±</ion-button>
+    <ion-button class="operations-buttons other-button">0</ion-button>
+    <ion-button class="operations-buttons other-button">,</ion-button>
+    <ion-button class="operations-buttons equals-button">=</ion-button>
   </div>
 
 </ion-content>
