--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="result">
-    <p>{{ result }}</p>
+    <p>{{ count }}</p>
   </div>
   <div class="m">
     <ion-button disabled>MC</ion-button>
@@ -20,31 +20,31 @@
   </div>
 
   <div class="operations">
-    <ion-button class="operations-buttons">%</ion-button>
-    <ion-button class="operations-buttons">CE</ion-button>
-    <ion-button class="operations-buttons">C</ion-button>
-    <ion-button class="operations-buttons">
+    <ion-button class="operations-buttons" (click)="addToCount('%')">%</ion-button>
+    <ion-button class="operations-buttons" (click)="clear()">CE</ion-button>
+    <ion-button class="operations-buttons" (click)="clear()">C</ion-button>
+    <ion-button class="operations-buttons" (click)="removeLast()">
       <ion-icon name="backspace"></ion-icon>
     </ion-button>
-    <ion-button class="operations-buttons">1/x</ion-button>
-    <ion-button class="operations-buttons">x²</ion-button>
-    <ion-button class="operations-buttons">√x</ion-button>
-    <ion-button class="operations-buttons">÷</ion-button>
-    <ion-button class="operations-buttons other-button">7</ion-button>
-    <ion-button class="operations-buttons other-button">8</ion-button>
-    <ion-button class="operations-buttons other-button">9</ion-button>
-    <ion-button class="operations-buttons">x</ion-button>
-    <ion-button class="operations-buttons other-button">4</ion-button>
-    <ion-button class="operations-buttons other-button">5</ion-button>
-    <ion-button class="operations-buttons other-button">6</ion-button>
-    <ion-button class="operations-buttons">-</ion-button>
-    <ion-button class="operations-buttons other-button">1</ion-button>
-    <ion-button class="operations-buttons other-button">2</ion-button>
-    <ion-button class="operations-buttons other-button">3</ion-button>
-    <ion-button class="operations-buttons">+</ion-button>
-    <ion-button class="operations-buttons other-button">±</ion-button>
-    <ion-button class="operations-buttons other-button">0</ion-button>
-    <ion-button class="operations-buttons other-button">,</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('1/')">1/x</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('²')">x²</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('√')">√x</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('÷')">÷</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('7')">7</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('8')">8</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('9')">9</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('x')">x</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('4')">4</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('5')">5</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('6')">6</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('-')">-</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('1')">1</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('2')">2</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('3')">3</ion-button>
+    <ion-button class="operations-buttons" (click)="addToCount('+')">+</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('±')">±</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount('0')">0</ion-button>
+    <ion-button class="operations-buttons other-button" (click)="addToCount(',')">,</ion-button>
     <ion-button class="operations-buttons equals-button">=</ion-button>
   </div>
 
