Resolving basic operations

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -29,8 +29,8 @@
     <ion-button color="tertiary" (click)="lower()">MENOR</ion-button>
   </div>
 
-  <div class="result-operation">
+  <ion-card class="result-operation">
     <ion-label>RESULTADO: <span>{{ result }}</span></ion-label>
     <ion-label>OPERAÇÃO: <span>{{ operation }}</span></ion-label>
-  </div>
+  </ion-card>
 </ion-content>
