--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -31,6 +31,7 @@ ion-item {
 .result-operation {
   display: flex;
   flex-direction: column;
+  padding: 0.5rem;
 
   ion-label {
     font-size: 1.3rem;
